--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "author": "Oscar Karlsson",
   "license": "MIT",
   "dependencies": {
+    "@react-oauth/google": "^0.2.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
+    "dotenv-webpack": "^7.1.0",
     "express": "^4.18.1",
+    "google-auth-library": "^8.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -27,6 +31,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "babel-loader": "^8.2.5",
