--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "nodemailer": "^6.7.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -33,6 +34,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "babel-loader": "^8.2.5",
